@@ -11,7 +11,7 @@ COPY docker-entrypoint.sh /endkind/docker-entrypoint.sh
 RUN chmod +x /endkind/getPaperMC.sh
 RUN chmod +x /endkind/docker-entrypoint.sh
 
-ARG PAPERMC_VERSION=1.16.5
+ARG PAPERMC_VERSION=1.17
 RUN echo "$PAPERMC_VERSION" > /endkind/papermc_version
 
 WORKDIR /papermc
@@ -20,6 +20,8 @@ VOLUME /papermc
 
 ENV MIN_RAM=512M
 ENV MAX_RAM=1G
+ENV MINECRAFT_EULA=false
+ENV JAVA_FLAGS="--add-modules=jdk.incubator.vector -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1 -Dusing.aikars.flags=https://mcflags.emc.gs -Daikars.new.flags=true -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20"
 ENV PAPERMC_FLAGS="--nojline"
 
 ENTRYPOINT ["/endkind/docker-entrypoint.sh"]
